--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       src="https://kit.fontawesome.com/2d17dbbe16.js"
       crossorigin="anonymous"
     ></script>
-    <title>Iguana Page</title>
+    <title>Pagina Iguanas</title>
     <link
       rel="shortcut icon"
       href="./assets/imgs/favicon.ico"
